--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "vue": "^3.4.30",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "@popperjs/core": "^2.11.6"  // Added dependency
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
