--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.4.30",
     "vue-router": "^4.4.0",
-    "@popperjs/core": "^2.11.6"  // Added dependency
+    "@popperjs/core": "^2.11.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
