--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --host 0.0.0.0",
-    "build": "vue-cli-service build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-eslint": "^5.0.0",
     "@vue/cli-service": "~4.5.0",
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
@@ -43,9 +43,5 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ],
-  "engines": {
-    "node": ">=18.17.0",
-    "npm": ">=10.8.1"
-  }
+  ]
 }
