--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 
 /node_modules
 node_modules/.cache/eslint/2feee84c.json
+/node_modules/.cache/eslint
+/node_modules/.cache
+node_modules/.cache/eslint/2feee84c.json
